2004-09-01  David Schleef  <ds@schleef.org>

	Make more compatibile with glib-compat.
	* Makefile.am:
	* README:
	* configure.ac:
	* gimp-loader/Makefile.am:
	* gimp-loader/swf-gimp.c:
	* libswfdec/Makefile.am:
	* swfdec.pc.in:

	Glib compatibility stuff.  Mostly taken from glib.
	* glib-compat/Makefile.am:
	* glib-compat/glib.h:
	* glib-compat/glib/Makefile.am:
	* glib-compat/glib/config.h:
	* glib-compat/glib/garray.c:
	* glib-compat/glib/garray.h:
	* glib-compat/glib/gdebug.h:
	* glib-compat/glib/gfileutils.c:
	* glib-compat/glib/gfileutils.h:
	* glib-compat/glib/glist.c:
	* glib-compat/glib/glist.h:
	* glib-compat/glib/gmacros.h:
	* glib-compat/glib/gmem.c:
	* glib-compat/glib/gmem.h:
	* glib-compat/glib/gmessages.h:
	* glib-compat/glib/gprintfint.h:
	* glib-compat/glib/gstrfuncs.c:
	* glib-compat/glib/gstrfuncs.h:
	* glib-compat/glib/gtypes.h:
	* glib-compat/glibconfig.h:

2004-09-01  David Schleef  <ds@schleef.org>

	Make less dependent on gobject.  Change API to use SwfdecBuffer.
	* libswfdec/Makefile.am: remove swf.h
	* libswfdec/swf.c: (swfdec_decoder_new), (swfdec_decoder_add_data),
	(swfdec_decoder_add_buffer), (swfdec_decoder_free):
	* libswfdec/swf.h: remove
	* libswfdec/swfdec.h:
	* libswfdec/swfdec_buffer.c: (swfdec_buffer_unref):
	* libswfdec/swfdec_button.c: (tag_func_define_button_2):
	* libswfdec/swfdec_button.h:
	* libswfdec/swfdec_decoder.h:
	* libswfdec/swfdec_font.c: (swfdec_font_dispose),
	(tag_func_define_font), (tag_func_define_font_2):
	* libswfdec/swfdec_image.c: (tag_func_define_bits_jpeg),
	(tag_func_define_bits_jpeg_2), (tag_func_define_bits_jpeg_3),
	(define_bits_lossless):
	* libswfdec/swfdec_object.c: (swfdec_object_new),
	(swfdec_object_unref):
	* libswfdec/swfdec_object.h:
	* libswfdec/swfdec_render.c: (swfdec_render_free): Fix memleak.
	* libswfdec/swfdec_shape.c: (tag_define_shape),
	(tag_define_shape_3):
	* libswfdec/swfdec_sound.c: (tag_func_define_sound),
	(tag_func_sound_stream_head), (swfdec_sound_render),