@@ -13,7 +13,7 @@ SWF_DEBUG="-Wall -Werror"
 AM_INIT_AUTOMAKE($PACKAGE,$VERSION)
 AS_LIBTOOL(SWFDEC, 0, 1, 0, yes)
 
-SWFDEC_MAJORMINOR=0.2
+SWFDEC_MAJORMINOR=0.3
 AC_SUBST(SWFDEC_MAJORMINOR)
 
 AM_CONFIG_HEADER(config.h)
@@ -87,11 +87,11 @@ if test "$HAVE_SDL" = "yes"; then
 fi
 AM_CONDITIONAL(WITH_SDL,[test "$HAVE_SDL" = "yes"])
 
-PKG_CHECK_MODULES(LIBOIL, liboil-0.1, HAVE_LIBOIL=yes, HAVE_LIBOIL=no)
+PKG_CHECK_MODULES(LIBOIL, liboil-0.2, HAVE_LIBOIL=yes, HAVE_LIBOIL=no)
 AC_SUBST(LIBOIL_LIBS)
 AC_SUBST(LIBOIL_CFLAGS)
 if test "$HAVE_LIBOIL" = "no"; then
-  AC_MSG_ERROR([cannot find liboil-0.1, which is required for build])
+  AC_MSG_ERROR([cannot find liboil-0.2, which is required for build])
 fi
 
 PKG_CHECK_MODULES(LIBART, libart-2.0, HAVE_LIBART=yes, HAVE_LIBART=no)
